@@ -13,7 +13,9 @@ package org.mini2Dx.ui.element;
 
 import java.util.ArrayList;
 import java.util.Iterator;
+import java.util.LinkedList;
 import java.util.List;
+import java.util.Queue;
 
 import org.mini2Dx.core.serialization.annotation.ConstructorArg;
 import org.mini2Dx.core.serialization.annotation.Field;
@@ -136,9 +138,17 @@ public class RadioButton extends UiElement implements Actionable {
 	}
 
 	@Override
+	public void defer(Runnable runnable) {
+		deferredQueue.offer(runnable);
+	}
+	
+	@Override
 	public void syncWithRenderNode() {
 		while (!effects.isEmpty()) {
 			renderNode.applyEffect(effects.poll());
+		}
+		while (!deferredQueue.isEmpty()) {
+			deferredQueue.poll().run();
 		}
 	}
 
