@@ -12,7 +12,9 @@
 package org.mini2Dx.ui.element;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
+import java.util.Queue;
 
 import org.mini2Dx.core.serialization.annotation.ConstructorArg;
 import org.mini2Dx.core.serialization.annotation.Field;
@@ -29,6 +31,8 @@ import org.mini2Dx.ui.render.TextBoxRenderNode;
  * A text box {@link UiElement}. Can optionally function as a password field.
  */
 public class TextBox extends UiElement implements Actionable {
+	private final Queue<Runnable> deferredQueue = new LinkedList<Runnable>();
+	
 	private List<ActionListener> actionListeners;
 	private String value = "";
 
@@ -104,9 +108,17 @@ public class TextBox extends UiElement implements Actionable {
 	}
 
 	@Override
+	public void defer(Runnable runnable) {
+		deferredQueue.offer(runnable);
+	}
+	
+	@Override
 	public void syncWithRenderNode() {
 		while (!effects.isEmpty()) {
 			renderNode.applyEffect(effects.poll());
+		}
+		while (!deferredQueue.isEmpty()) {
+			deferredQueue.poll().run();
 		}
 	}
 
